fix:adds .splat-box to start aligning grid content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,12 @@ h1 {
 
 /* ............................................COLOUR SPLAT GRID STYLES */
 
+.splat-box p {
+    margin:auto;
+    text-align: center;
+
+}
+
 /* section {
     margin:0;
     position:absolute;
